--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,11 @@ VERSION 0  FIXED ELASTICSEARCH-RELATED TARGETS
 ==============================================
 
    Version 0.16 - Solr support
+      11/01/2016 13:41  0.16.3  Symfony ~3.0 compatibility
+         6026240 Merge pull request #29 from j0k3r/patch-1
+         ea13d83 Allow Symfony3 installation
+         ee5c300 Merge pull request #27 from ikwattro/doc-typo
+         3de702c minor typo fix in docs
       07/12/2015 23:24  0.16.2  Fixes rules composition
          7674111 Make sure composite rules are correctly aggregated
          445b373 Give the AbstractSpecification an empty getParameters() method
