--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,8 @@ VERSION 0  FIXED ELASTICSEARCH-RELATED TARGETS
 ==============================================
 
    Version 0.18 - Embeddable support for Doctrine ORM
+      19/02/2016 22:44  0.18.1  Make the DoctrineQueryBuilder target compatible with Doctrine <2.5
+         56b37f3 Make the DoctrineQueryBuilder target compatible with Doctrine <2.5
       19/01/2016 23:13  0.18.0  initial release
          2217380 Merge branch 'doctrine-embeddables'
          6633130 Use short array syntax
