--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,11 @@ VERSION 0  FIXED ELASTICSEARCH-RELATED TARGETS
 ==============================================
 
    Version 0.20 - Allow to unwrap decorated values and improve ES results fetching
+      01/05/2017 11:40  0.20.3  Fix null handling in native rules compilation
+         28fa0e3 Merge pull request #78 from K-Phoen/analysis-qoMwO5
+         56b3e7d Apply fixes from StyleCI
+         3c0b408 Merge pull request #77 from pioneer32/fix-null-comparison
+         febe5d0 Prevent ObjectContext from wrapping nulls.
       27/04/2017 19:25  0.20.2  Fix compilation for multiline rules
          8cc49cc Merge pull request #74 from jhuet/fix-multilines-rule
          4e0e1b2 Fix compilation when multilines rule is provided
